@@ -1,0 +1,4 @@
+alter table shipment add column shipping_from date;
+
+alter table shipment add column shipping_to date;
+
